--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "nodemon src/index.js | pino-pretty",
     "start": "node src/index.js",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -20,10 +21,13 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
+    "pino": "^10.1.0",
+    "pino-http": "^11.0.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
+    "pino-pretty": "^13.1.3",
     "supertest": "^7.1.4",
     "vitest": "^4.0.15"
   }
